--- a/Django/django-practice/login/templates/base.html
+++ b/Django/django-practice/login/templates/base.html
@@ -1,5 +1,6 @@
 {% load django_bootstrap5 %}
 {% load static %}
+
 <!doctype html>
 <html lang="en">
 
@@ -7,12 +8,11 @@
   <title>Muum</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- Bootstrap CSS v5.2.1 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  {% bootstrap_css %}
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  {% block css %}{% endblock css %}
   <link rel="shortcut icon" href="{% static 'css/pngwing.com.png' %}">
 </head>
 
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="{% url 'accounts:index' %}">Home</a>
-            <a class="nav-link" href="#">영화 게시판</a>
+            <a class="nav-link" href="{% url 'articles:index' %}">영화 게시판</a>
             <a class="nav-link" href="#">취미 게시판</a>
           </div>
           <div>
@@ -57,14 +57,8 @@
   <footer>
     <!-- place footer here -->
   </footer>
-  <!-- Bootstrap JavaScript Libraries -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-  </script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-    integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-  </script>
+  {% bootstrap_javascript %}
+  {% block js %}{% endblock js %}
 </body>
 
 </html>
