--- a/Django/django-practice/login/accounts/templates/accounts/articles.html
+++ b/Django/django-practice/login/accounts/templates/accounts/articles.html
@@ -1,114 +1,110 @@
 {% extends 'base.html' %}
+{% load django_bootstrap5 %}
 
 {% block css %}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 {% endblock css %}
 
 {% block content %}
-  <div class="container">
-    <div class="pt-4">
-        <table class="table table-hover">
+  <div class="container my-5">
+    <h1 class="mb-3">{{ request.user }}님의 작성글</h1>
+    <div>
+      <table class="table table-hover">
         <thead>
-            <tr>
+          <tr>
             <th scope="col">번호</th>
             <th scope="col">제목</th>
             <th scope="col">영화</th>
             <th scope="col">평점</th>
             <th scope="col">작성일</th>
             <th scope="col">작성자</th>
-            </tr>
+          </tr>
         </thead>
         <tbody>
-            {% for article in articles %}
+          {% for article in articles %}
             <tr>
-                <th scope="row" class="align-middle col-md-1">{{ article.pk }}</td>
-                <td class="align-middle col-md-4">
+              <th scope="row" class="align-middle">{{ article.pk }}</td>
+              <td class="align-middle">
                 <a href="{% url 'articles:detail' article.pk %}" class="text-decoration-none">{{ article.title }}</a>
-                </td>
-                <td class="align-middle col-md-1">{{ article.movie_name }}</td>
-                <td class="align-middle col-md-1">
+              </td>
+              <td class="align-middle">{{ article.movie_name }}</td>
+              <td class="align-middle">
                 <div class="d-flex align-items-center">
-                    {% if article.grade == 0 %}
+                  {% if article.grade == 0 %}
                     <div class="text-warning bi-star"></div>
                     <div class="text-warning bi-star"></div>
                     <div class="text-warning bi-star"></div>
                     <div class="text-warning bi-star"></div>
                     <div class="text-warning bi-star"></div>
-                    {% elif article.grade == 0.5 %}
+                  {% elif article.grade == 0.5 %}
                     <div class="text-warning bi-star-half"></div>
                     <div class="text-warning bi-star"></div>
                     <div class="text-warning bi-star"></div>
                     <div class="text-warning bi-star"></div>
                     <div class="text-warning bi-star"></div>
-                    {% elif article.grade == 1.0 %}
+                  {% elif article.grade == 1.0 %}
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star"></div>
                     <div class="text-warning bi-star"></div>
                     <div class="text-warning bi-star"></div>
                     <div class="text-warning bi-star"></div>
-                    {% elif article.grade == 1.5 %}
+                  {% elif article.grade == 1.5 %}
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star-half"></div>
                     <div class="text-warning bi-star"></div>
                     <div class="text-warning bi-star"></div>
                     <div class="text-warning bi-star"></div>
-                    {% elif article.grade == 2.0 %}
+                  {% elif article.grade == 2.0 %}
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star"></div>
                     <div class="text-warning bi-star"></div>
                     <div class="text-warning bi-star"></div>
-                    {% elif article.grade == 2.5 %}
+                  {% elif article.grade == 2.5 %}
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star-half"></div>
                     <div class="text-warning bi-star"></div>
                     <div class="text-warning bi-star"></div>
-                    {% elif article.grade == 3.0 %}
+                  {% elif article.grade == 3.0 %}
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star"></div>
                     <div class="text-warning bi-star"></div>
-                    {% elif article.grade == 3.5 %}
+                  {% elif article.grade == 3.5 %}
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star-half"></div>
                     <div class="text-warning bi-star"></div>
-                    {% elif article.grade == 4.0 %}
+                  {% elif article.grade == 4.0 %}
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star"></div>
-                    {% elif article.grade == 4.5 %}
+                  {% elif article.grade == 4.5 %}
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star-half"></div>
-                    {% elif article.grade == 5.0 %}
+                  {% elif article.grade == 5.0 %}
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star-fill"></div>
                     <div class="text-warning bi-star-fill"></div>
-                    {% endif %}
+                  {% endif %}
                 </div>
-                </td>
-                <td class="align-middle col-md-1">{{ article.created_at|date:'m.d' }}</td>
-                <!-- <td class="align-middle">{{ article.updated_at|date:'Y-m-d a h:i' }}</td> -->
-                <td class="align-middle col-md-1">{{ article.user }}</a></td>
+              </td>
+              <td class="align-middle col-md-1">{{ article.created_at|date:'m.d' }}</td>
+              <td class="align-middle col-md-1">{{ article.user }}</a></td>
             </tr>
-            {% endfor %}
+          {% endfor %}
         </tbody>
-        </table>
-    </div>
-    <div class="d-flex justify-content-end">
-      <a href="{% url 'articles:create' %}">
-        <button type="button" class="btn btn-outline-primary">글쓰기</button>
-      </a>
+      </table>
     </div>
   </div>
 {% endblock content %}
