--- a/Django/django-practice/login/accounts/templates/accounts/index.html
+++ b/Django/django-practice/login/accounts/templates/accounts/index.html
@@ -2,9 +2,26 @@
 {% load django_bootstrap5 %}
 
 {% block content %}
-
-<div class="d-flex justify-content-center my-3">
-  <h1>메인</h1>
-</div>
-
+  <div class="p-4">
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th scope="col">PK</th>
+          <th scope="col">이름</th>
+          <th scope="col">이메일</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for user in users %}
+          <tr>
+            <th scope="row" class="align-middle">{{ user.pk }}</td>
+            <td class="align-middle">
+              <a href="{% url 'accounts:detail' user.pk %}" class="text-decoration-none">{{ user.username }}</a>
+            </td>
+            <td class="align-middle">{{ user.email }}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
 {% endblock content %}
