--- a/Django/django-practice/login/accounts/templates/accounts/signup.html
+++ b/Django/django-practice/login/accounts/templates/accounts/signup.html
@@ -2,7 +2,7 @@
 {% load django_bootstrap5 %}
 
 {% block content %}
-<div class="container mt-5">
+<div class="container my-5">
   <h1>회원가입</h1>
   <!-- {{ form.as_p }} -->
   <form action="" method="POST">
