--- a/Django/django-practice/login/articles/templates/articles/create.html
+++ b/Django/django-practice/login/articles/templates/articles/create.html
@@ -16,7 +16,7 @@
     </div>
     <div class="row justify-content-center">
       <div class="col-md-12 col-lg-6">
-        <form class="form" action="" method="POST">
+        <form class="form" action="" method="POST" enctype="multipart/form-data">
           {% csrf_token %}
           {% bootstrap_form form %}
           <div class="mb-3">
