--- a/Django/django-practice/login/articles/templates/articles/detail.html
+++ b/Django/django-practice/login/articles/templates/articles/detail.html
@@ -101,6 +101,15 @@
             {% endif %}
           </div>
         </div>
+        <div class="bg-light p-3 mb-4" style="border-radius: 1rem; box-shadow: 2px 3px 7px rgba(0, 0, 0, 0.493);">
+          <h5>댓글</h5>
+          <hr>
+          {% for comment in comments %}
+            <p>{{ comment.content}} </p>
+          {% empty %}
+            <p>댓글이 아직 없어요.</p>
+          {% endfor %}
+        </div>
         <div class='d-flex justify-content-end'>
         {% if article.user == article.user %}
           <form action="{% url 'articles:delete' article.pk %}" method="POST" class="form">
