--- a/Django/django-practice/login/articles/templates/articles/detail.html
+++ b/Django/django-practice/login/articles/templates/articles/detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load django_bootstrap5 %}
 
 {% block css %}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -102,12 +103,31 @@
           </div>
         </div>
         <div class="bg-light p-3 mb-4" style="border-radius: 1rem; box-shadow: 2px 3px 7px rgba(0, 0, 0, 0.493);">
-          <h5>댓글</h5>
+          <h5>댓글 ({{ comments|length }})</h5>
+          {% comment %} <h5>{{ comments|length }}개의 댓글</h5> {% endcomment %}
+          {% if request.user.is_authenticated %}
+          <form action="{% url 'articles:comment_create' article.pk %}" method="POST">
+            {% csrf_token %}
+            {% bootstrap_form comment_form layout='inline' %}
+            {% bootstrap_button button_type="submit" content="OK" %}
+          </form>
+          {% else %}
+            <a href="{% url 'accounts:login' %}">[댓글을 작성하려면 로그인하세요.]</a>
+          {% endif %}
           <hr>
           {% for comment in comments %}
-            <p>{{ comment.content}} </p>
-          {% empty %}
-            <p>댓글이 아직 없어요.</p>
+            <div class="mt-3">
+              <p>{{ comment.user }} | {{ comment.created_at }}</p>
+              <p>{{ comment.content }}</p>
+              {% if user == comment.user %}
+                <form action="{% url 'articles:comment_delete' article.pk comment.pk %}" method="POST" class="d-inline">
+                  {% csrf_token %}
+                  {% bootstrap_button button_type="submit" content="DELETE" %}
+                </form>
+              {% endif %}
+            {% empty %}
+              <p>댓글이 아직 없어요.</p>
+            </div>
           {% endfor %}
         </div>
         <div class='d-flex justify-content-end'>
