--- a/Django/django-practice/login/accounts/templates/accounts/mypage.html
+++ b/Django/django-practice/login/accounts/templates/accounts/mypage.html
@@ -28,7 +28,7 @@
       <div class="col-sm-4 mb-3">
         <div class="card text-center" style="height: 10rem;">
           <div class="card-body d-flex align-items-center justify-content-center">
-            <a href="#">
+            <a href="{% url 'accounts:comments' user.pk %}">
               <h5 class="card-title my-auto">작성 댓글</h5>
             </a>
           </div>
