--- a/Django/django-practice/login/articles/templates/articles/detail.html
+++ b/Django/django-practice/login/articles/templates/articles/detail.html
@@ -9,11 +9,11 @@
   <div class="p-4">
     <div class="row justify-content-center">
       <div class="col-md-12 col-lg-6">
-        <div class="bg-light p-3 mb-4" style="border-radius: 1rem; box-shadow: 2px 3px 7px rgba(0, 0, 0, 0.493);">
-          <h1 class="mb-3 fw-bolder">{{ article.title }}</h1>
-          <p class="mb-3" style="font-size: 0.9rem;">
+        <div class="bg-light p-3 mb-4" style="border-radius: 0.5rem; box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);">
+          <h2 class="mb-1 fw-bolder">{{ article.title }}</h2>
+          <div class="d-flex justify-content-between">
             <div class="d-flex align-items-center">
-              <h6 class="me-3 my-0">{{ article.movie_name }}</h6>
+              <h6 class="ms-1 me-3 my-0">{{ article.movie_name }}</h6>
               {% if article.grade == 0 %}
                 <div class="text-warning bi-star"></div>
                 <div class="text-warning bi-star"></div>
@@ -82,11 +82,13 @@
                 <div class="text-warning bi-star-fill"></div>
               {% endif %}
             </div>
-          </p>
-          <div class="d-flex justify-content-between">
-            <p class="fw-light mb-1 text-end" style="font-size: 0.7rem;">
-              {{ article.user }}
-            </p>
+            <div>
+              <p class="fw-light mb-1 text-end" style="font-size: 1rem;">
+                작성자 : <a href="{% url 'accounts:mypage' article.user.pk %}">{{ article.user }}</a>
+              </p>
+            </div>
+          </div>
+          <div class="d-flex justify-content-end mt-1">
             <p class="fw-light mb-1 text-end" style="font-size: 0.7rem;">
               {{ article.created_at|date:'Y-m-d a h:i' }}
               작성 |
@@ -95,14 +97,14 @@
             </p>
           </div>
           <div>
-            <hr>
+            <hr class="mt-2">
             <p>{{ article.content }}</p>
             {% if article.image %}
               <img src="{{ article.image.url }}" alt="{{ article.image }}">
             {% endif %}
           </div>
         </div>
-        <div class="bg-light p-3 mb-4" style="border-radius: 1rem; box-shadow: 2px 3px 7px rgba(0, 0, 0, 0.493);">
+        <div class="bg-light p-3 mb-4" style="border-radius: 0.5rem; box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);">
           <h5>댓글 ({{ comments|length }})</h5>
           {% comment %} <h5>{{ comments|length }}개의 댓글</h5> {% endcomment %}
           {% if request.user.is_authenticated %}
@@ -125,13 +127,13 @@
                   {% bootstrap_button button_type="submit" content="DELETE" %}
                 </form>
               {% endif %}
-            {% empty %}
-              <p>댓글이 아직 없어요.</p>
             </div>
+            {% empty %}
+            <p>댓글이 아직 없어요.</p>
           {% endfor %}
         </div>
         <div class='d-flex justify-content-end'>
-        {% if article.user == article.user %}
+        {% if request.user == article.user %}
           <form action="{% url 'articles:delete' article.pk %}" method="POST" class="form">
             {% csrf_token %}
             <div class="d-block d-lg-none">
