--- a/Django/django-practice/login/static/css/styles.css
+++ b/Django/django-practice/login/static/css/styles.css
@@ -13,3 +13,8 @@ a {
     text-decoration: none;
     color: rgb(8, 96, 168);
 }
+
+.card-shadow {
+    border-radius: 0.5rem; 
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+}
