--- a/Django/django-practice/login/templates/main.html
+++ b/Django/django-practice/login/templates/main.html
@@ -7,11 +7,11 @@
       <div class="col-4 mb-3">
         {% comment %} 이미지 있는 글만 보이게 {% endcomment %}
         {% if article.image %}
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 18rem; border-radius: 0.5rem; box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);">
           <a href="{% url 'articles:detail' article.pk %}"><img src="{{ article.image.url }}" class="card-img-top" alt="..."></a>
           <div class="card-body">
-            <h5 class="card-title">{{ article.title }}</h5>
-            <p class="card-text">Some quick example text to build on th</p>
+            <a href="{% url 'articles:detail' article.pk %}" style="color: black;"><h5 class="card-title">{{ article.title }}</h5></a>
+            <a href="{% url 'articles:detail' article.pk %}" style="color: black;"><p class="card-text">{{ article.content }}</p></a>
           </div>
         </div>
         {% endif %}
