--- a/Django/django-practice/login/articles/templates/articles/detail.html
+++ b/Django/django-practice/login/articles/templates/articles/detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load django_bootstrap5 %}
+{% load static %}
 
 {% block css %}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -90,10 +91,10 @@
           </div>
           <div class="d-flex justify-content-end mt-1">
             <p class="fw-light mb-1 text-end" style="font-size: 0.7rem;">
-              {{ article.created_at|date:'Y-m-d a h:i' }}
-              작성 |
-              {{ article.updated_at|date:'Y-m-d a h:i' }}
-              수정
+              작성 
+              {{ article.created_at|date:'Y-m-d H:i' }}
+              | 수정
+              {{ article.updated_at|date:'Y-m-d H:i' }}
             </p>
           </div>
           <div>
@@ -109,31 +110,53 @@
           {% comment %} <h5>{{ comments|length }}개의 댓글</h5> {% endcomment %}
           {% if request.user.is_authenticated %}
           <form action="{% url 'articles:comment_create' article.pk %}" method="POST">
-            {% csrf_token %}
-            {% bootstrap_form comment_form layout='inline' %}
-            {% bootstrap_button button_type="submit" content="OK" %}
+              {% csrf_token %}
+              {% bootstrap_form comment_form %}
+            <div class="d-flex justify-content-end">
+              <input class="btn btn-sm btn-outline-primary" type="submit" value="등록">
+            </div>
           </form>
           {% else %}
             <a href="{% url 'accounts:login' %}">[댓글을 작성하려면 로그인하세요.]</a>
           {% endif %}
           <hr>
           {% for comment in comments %}
-            <div class="mt-3">
-              <p>{{ comment.user }} | {{ comment.created_at }}</p>
-              <p>{{ comment.content }}</p>
+            <div class="mt-3 d-flex justify-content-between">
+              <div>
+                <p style="font-size: 0.7rem; margin-bottom: 0rem;">{{ comment.user }} | {{ comment.created_at|date:'Y-m-d H:i' }}</p>
+                <p style="margin-bottom: 0rem;">{{ comment.content }}</p>
+              </div>
+              <div class="d-flex justify-content-end mt-2">
               {% if user == comment.user %}
-                <form action="{% url 'articles:comment_delete' article.pk comment.pk %}" method="POST" class="d-inline">
+                <!-- 댓글 삭제, 수정 버튼 -->
+                <button class="btn btn-none border-0 p-0 me-2" id="update-btn-{{ comment.pk }}"><img src="{% static 'image/edit.png' %}" style="width: 20px"></button>
+                <form action="{% url 'articles:comment_delete' article.pk comment.pk %}" method="POST" class="d-inline mt-1">
                   {% csrf_token %}
-                  {% bootstrap_button button_type="submit" content="DELETE" %}
+                  <button class="btn btn-none border-0 p-0" type="submit"><img src="{% static 'image/bin.png' %}" style="width: 24px"></button>
+                  {% comment %} <input class="btn btn-sm btn-outline-danger" type="submit" value="삭제"> {% endcomment %}
                 </form>
+              {% else %}
               {% endif %}
+              </div>
+            </div>
+            <div class="comment_update_{{ comment.pk }} d-none">
+              <form action="{% url 'articles:comment_update' article.pk comment.pk %}" method="POST" class="form">
+                {% csrf_token %}
+                <div class="mb-3">
+                  <input type="text" class="form-control" name="updated_comment" id="updated_comment" maxlength="80" placeholder="댓글" value="{{ comment.content }}" required>
+                </div>
+                <div class="d-flex justify-content-end">
+                  <input class="btn btn-sm btn-primary me-1" type="submit" value="완료">
+                  <button class="btn btn-sm btn-secondary cancel_btn_{{ comment.pk }}" type="button">취소</button>
+                </div>
+              </form>   
             </div>
             {% empty %}
             <p>댓글이 아직 없어요.</p>
           {% endfor %}
         </div>
         <div class='d-flex justify-content-end'>
-        {% if request.user == article.user %}
+        {% if request.user == article.user or request.username == 'admin' %}
           <form action="{% url 'articles:delete' article.pk %}" method="POST" class="form">
             {% csrf_token %}
             <div class="d-block d-lg-none">
@@ -149,13 +172,13 @@
           </form>
         {% else %}
           <div class="d-block d-lg-none">
-            <button class="btn btn-outline-primary form-control mb-3 disabled">수정</button>
-            <button class="btn btn-outline-danger form-control mb-3 disabled">삭제</button>
+            <!-- <button class="btn btn-outline-primary form-control mb-3 disabled">수정</button>
+            <button class="btn btn-outline-danger form-control mb-3 disabled">삭제</button> -->
             <a href="{% url 'articles:index' %}" class="btn btn-outline-secondary form-control mb-3">뒤로</a>
           </div>
           <div class="d-none d-lg-block">
-            <button class="btn btn-outline-primary disabled">수정</button>
-            <button class="btn btn-outline-danger disabled">삭제</button>
+            <!-- <button class="btn btn-outline-primary disabled">수정</button>
+            <button class="btn btn-outline-danger disabled">삭제</button> -->
             <a href="{% url 'articles:index' %}" class="btn btn-outline-secondary">뒤로</a>
           </div>
         {% endif %}
