--- a/Django/django-practice/login/static/css/styles.css
+++ b/Django/django-practice/login/static/css/styles.css
@@ -1,12 +1,12 @@
 @font-face {
-    font-family: 'GmarketSansMedium';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
-    font-weight: normal;
+    font-family: 'Pretendard-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
     font-style: normal;
 }
 
 * {
-    font-family: 'GmarketSansMedium';
+    font-family: 'Pretendard-Regular';
 }
 
 a {
@@ -14,7 +14,19 @@ a {
     color: rgb(8, 96, 168);
 }
 
-.card-shadow {
+.card-style {
     border-radius: 0.5rem; 
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+}
+
+/* .card-style:hover {
+    transform: translate(0,-5px);
+  } */
+
+.grow {
+    transition: all .2s ease-in-out;
+}
+
+.grow:hover {
+    transform: scale(1.03);
 }
