--- a/Django/django-practice/login/templates/base.html
+++ b/Django/django-practice/login/templates/base.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="{% static 'css/pngwing.com.png' %}" alt="Logo" width="30" height="24" class="d-inline-block align-text-top ms-3">
+          <img src="{% static 'image/pngwing.com.png' %}" alt="Logo" width="30" height="24" class="d-inline-block align-text-top ms-3">
         </a>
         <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
