--- a/Django/django-practice/login/accounts/templates/accounts/mypage.html
+++ b/Django/django-practice/login/accounts/templates/accounts/mypage.html
@@ -34,6 +34,34 @@
           </div>
         </div>
       </div>
+      <div class="col-sm-4 mb-3">
+        <div class="card text-center" style="height: 10rem;">
+          <div class="card-body d-flex align-items-center justify-content-center">
+            <a href="{% url 'accounts:comments' user.pk %}">
+              <h5 class="card-title my-auto">좋아요 누른 글</h5>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 mb-3">
+        <div class="card text-center" style="height: 10rem;">
+          <div class="card-body d-flex align-items-center justify-content-center">
+            <a href="{% url 'accounts:comments' user.pk %}">
+              <h5 class="card-title my-auto">북마크</h5>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div>
+        <h3>좋아요 누른 글</h3>
+        <p class="text-muted">{{ user.like_articles.count }}개의 좋아요 누른 글</p>
+        {% for article in user.like_articles.all %}
+        <p>
+          {{ forloop.counter }}
+          <a href="{% url 'articles:detail' article.pk %}">{{ article.title }}</a>
+        </p>
+        {% endfor %}
+      </div>
     </div>
   </div>
 {% endblock content %}
