--- a/Django/django-practice/login/templates/main.html
+++ b/Django/django-practice/login/templates/main.html
@@ -4,7 +4,7 @@
   <div class="container my-5">
     <div class="row">
       {% for article in articles %}
-      <div class="col-md-4 col-sm-6 mb-4">
+      <div class="col-md-4 col-sm-6 p-3">
         {% comment %} 이미지 있는 글만 보이게 {% endcomment %}
         {% if article.image %}
         <div class="card card-style grow">
