--- a/Django/django-practice/login/accounts/templates/accounts/mypage.html
+++ b/Django/django-practice/login/accounts/templates/accounts/mypage.html
@@ -6,6 +6,16 @@
     <div class="d-flex justify-content-center align-items-center">
       <h1 class="me-4 my-4">{{ user.username }}님의 마이페이지</h1>
     </div>
+    <div>
+      {% if request.user != user %}
+        {% if request.user in user.followers.all %}
+        <a href="{% url 'accounts:follow' user.pk %}" class="btn btn-primary me-1">팔로잉</a>
+        {% else %}
+        <a href="{% url 'accounts:follow' user.pk %}" class="btn btn-outline-primary me-1">팔로우</a>
+        {% endif %}
+      {% endif %}
+      <span> 팔로워 {{ user.followers.count }} | 팔로잉 {{ user.followings.count }}</span>
+    </div>
     <div class="row my-5">
       <div class="col-sm-4 mb-3">
         <div class="card text-center" style="height: 10rem;">
@@ -37,8 +47,8 @@
       <div class="col-sm-4 mb-3">
         <div class="card text-center" style="height: 10rem;">
           <div class="card-body d-flex align-items-center justify-content-center">
-            <a href="{% url 'accounts:comments' user.pk %}">
-              <h5 class="card-title my-auto">좋아요 누른 글</h5>
+            <a href="{% url 'accounts:likes' user.pk %}">
+              <h5 class="card-title my-auto">좋아요 누른 글 ({{ user.like_articles.count }})</h5>
             </a>
           </div>
         </div>
@@ -47,20 +57,10 @@
         <div class="card text-center" style="height: 10rem;">
           <div class="card-body d-flex align-items-center justify-content-center">
             <a href="{% url 'accounts:comments' user.pk %}">
-              <h5 class="card-title my-auto">북마크</h5>
+              <h5 class="card-title my-auto">북마크 (0)</h5>
             </a>
           </div>
         </div>
-      </div>
-      <div>
-        <h3>좋아요 누른 글</h3>
-        <p class="text-muted">{{ user.like_articles.count }}개의 좋아요 누른 글</p>
-        {% for article in user.like_articles.all %}
-        <p>
-          {{ forloop.counter }}
-          <a href="{% url 'articles:detail' article.pk %}">{{ article.title }}</a>
-        </p>
-        {% endfor %}
       </div>
     </div>
   </div>
